--- a/roles/dnsServer/templates/named.conf.j2
+++ b/roles/dnsServer/templates/named.conf.j2
@@ -10,7 +10,7 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-        listen-on port 53 { 127.0.0.1; 192.168.0.107; };
+        listen-on port 53 { 127.0.0.1; {{ansible_host}}; };
         listen-on-v6 port 53 { ::1; };
         directory       "/var/named";
         dump-file       "/var/named/data/cache_dump.db";
@@ -18,7 +18,7 @@ options {
         memstatistics-file "/var/named/data/named_mem_stats.txt";
         recursing-file  "/var/named/data/named.recursing";
         secroots-file   "/var/named/data/named.secroots";
-        allow-query     { localhost; 192.168.0.0/24; };
+        allow-query     { localhost; {{IP_RANGE}}; };
 
         /*
          - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
@@ -63,7 +63,7 @@ file "forward.rits.local";
 allow-update { none; };
 };
 
-zone "0.168.192.in-addr.arpa" IN {
+zone "{{'.'.join(ansible_host.split('.')[::-1][1:])}}.in-addr.arpa" IN {
 type master;
 file "reverse.rits.local";
 allow-update { none; };
